-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.5.0-beta
-
None
When selection the "Examples" tab in the Welcome Screen and closing Qt Creator, Qt Creator will crash on following launches.
Change http://codereview.qt-project.org/#change,12027 triggers that crash. We should temporarily either workaround the crash or if needed revert the commit until Qt 4.8.1 is out.
This only happens with Qt 4.8. See the description of the crash: QTBUG-23445
- depends on
-
QTBUG-23445 Crash in QDeclarativeGridView (Triggered by corner case in Qt Creator's Welcome Screen)
-
- Closed
-
- replaces
-
QTCREATORBUG-6804 welcome screen 3 crashes when starting in full screen mode
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-6803 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
13511,1 | Still start up in welcome tab initially and if it was the previous tab | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |