Still start up in welcome tab initially and if it was the previous tab

Amendment to fe068869b946660f57ff01b19fa733c2c36a899a

Task-Number: QTCREATORBUG-6803
Change-Id: Ibf93ff87fc535133b87d8fdc51c2bce4da77ab76
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>