src/plugins/welcome/welcomeplugin.cpp
@@ -197,7 +197,8 @@ void WelcomeMode::initPlugins()
     setActivePlugin(settings->value(QLatin1String(currentPageSettingsKeyC)).toInt());
 
     // TODO: re-enable reading from Settings when possible. See QTCREATORBUG-6803
-    setActivePlugin(1);
+    if (activePlugin() > 1)
+        setActivePlugin(1);
 
     QDeclarativeContext *ctx = m_welcomePage->rootContext();
     ctx->setContextProperty(QLatin1String("welcomeMode"), this);
